Changes to be committed: modified:   Bedeutung_des_Medians.ipynb modified:   Berechnung_der_Standardabweichung.ipynb

--- a/Berechnung_der_Standardabweichung.ipynb
+++ b/Berechnung_der_Standardabweichung.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Berechnung der Standardabweichung einer Verteilung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gegeben ist der Datensatz aufgenommener Messwerte $v_i (1\\le i \\le n)$ mit den zugehörigen Häufigkeiten $n_i (1 \\le i \\le n)$. Dieser wird in einem `pd.DataFrame` dargestellt. Für diesen Datensatz sollen der Mittelwert und die Standardabweichung berechnet werden.\n",
+    "\n",
+    "Die Berechnung soll möglichst mit den Methoden von `pandas` durchgeführt werden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zunächst werden die Module `pandas` geladen und `numpy` geladen. Später wird noch das Modul `itertools` benötigt, das jetzt auch schon geladen wird."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,6 +32,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import itertools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anlegen des `pd.DataFrame()`:"
    ]
   },
   {
@@ -103,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Erzeuge ein `pd.Series`-Objekt, dass jeder einzelnen Ziehung eine Zeile zuordnet:"
+    "Um wieviele Beobachtungen handelt es insgesamt:"
    ]
   },
   {
@@ -114,41 +144,10 @@
     {
      "data": {
       "text/plain": [
-       "count    48.000000\n",
-       "mean      1.539583\n",
-       "std       0.413465\n",
-       "min       1.000000\n",
-       "25%       1.300000\n",
-       "50%       1.500000\n",
-       "75%       2.100000\n",
-       "max       2.100000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chn = itertools.chain.from_iterable([(n*[v]) for n,v in zip(df.n,df.v)])\n",
-    "\n",
-    "sr = pd.Series(chn)\n",
-    "sr.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "48"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,8 +158,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Berechnung der relativen Häufigkeiten über die absoluten Häufigkeiten:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +239,7 @@
        "4  2.1  13  0.270833"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,8 +250,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Der Mittelwert wird als\n",
+    "\n",
+    "$$\n",
+    "  v_\\text{mean} = \n",
+    "  \\dfrac{\\sum_i n_i\\,v_i}{\\sum_i n_i} = \\sum_i h_i\\,v_i\n",
+    "$$\n",
+    "\n",
+    "berechnet:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +274,7 @@
        "1.5395833333333333"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,6 +285,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bei der Berechnung der Varianz wird zwischen der Varinz einer Verteilung und der Varianz einer Stichprobe untertschieden.\n",
+    "\n",
+    "Die Varianz einer Verteilung und einer Stichprobe sind durch die Formeln\n",
+    "\n",
+    "\\begin{align*}\n",
+    "  V_\\text{Verteilung} &= \\dfrac{1}{n}\\, \\sum_n n_i\\,(v-v_\\text{mean})^2\\\\[2ex]\n",
+    "  V_\\text{Stichprobe} &= \\dfrac{1}{n-1}\\, \\sum_n n_i\\,(v-v_\\text{mean})^2\n",
+    "                       = \\dfrac{n}{n-1}\\, V\n",
+    "\\end{align*}\n",
+    "\n",
+    "definiert. Im allgemeinen geht man bei Messungen von der Varianz der Stichprobe aus. Die Zahl der Freiheitsgrade verringert sich dort von $n$ auf $n-1$, da bei Messwerten der Erwartungswert nicht bekannt ist und durch den Mittelwert geschätzt wird.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17095301418439715"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v_var = count/(count-1)*((df.v-v_mean)**2*df.h).sum()\n",
+    "v_var"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Standardabweichung ist die Quadratwurzel aus der Varianz:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -272,7 +337,7 @@
     {
      "data": {
       "text/plain": [
-       "0.41346464683742573"
+       "0.4134646468374257"
       ]
      },
      "execution_count": 8,
@@ -281,8 +346,85 @@
     }
    ],
    "source": [
-    "v_std = ((count/(count-1)*(df.v-v_mean)**2*df.h).sum())**0.5\n",
+    "v_std = v_var**0.5\n",
     "v_std"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Diese Größen können von `pandas` direkt ermittelt werden, wenn ein Objekt mit einfachen Meßdaten vorliegt. Dann wird nicht zu jedem `v` die zugehörige Häufigkeit `n` angegeben, sondern der Wert `v` tritt in dem DataFrame `n` Mal auf."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Erzeuge ein `pd.Series`-Objekt, dass jeder einzelnen Ziehung eine Zeile zuordnet:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     1.0\n",
+       "1     1.0\n",
+       "2     1.0\n",
+       "3     1.0\n",
+       "4     1.0\n",
+       "43    2.1\n",
+       "44    2.1\n",
+       "45    2.1\n",
+       "46    2.1\n",
+       "47    2.1\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chained = pd.Series(\n",
+    "    itertools.chain.from_iterable(\n",
+    "        [(n*[v]) for n,v in zip(df.n,df.v)]\n",
+    "    )\n",
+    ")\n",
+    "chained.head().append(chained.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    48.000000\n",
+       "mean      1.539583\n",
+       "std       0.413465\n",
+       "min       1.000000\n",
+       "25%       1.300000\n",
+       "50%       1.500000\n",
+       "75%       2.100000\n",
+       "max       2.100000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chained.describe()"
    ]
   }
  ],
