--- a/Bedeutung_des_Medians.ipynb
+++ b/Bedeutung_des_Medians.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "4  2.1  13"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4  2.1  13  0.270833  1.000000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
    "source": [
     "Die Bedeutung des Medians lässt sich durch folgende Überlegung erklären:\n",
     "\n",
-    "Wird die Größe `v` betrachtet und für die Werte, die von `v` repräsentiert werden, ein möglichst guter Schätzwert `x` gesucht, so wird dieser Schätzwert für in der Regel von einem `v_i` abweichen. Diese Abweichung\n",
+    "Wird die Größe `v` betrachtet und für die Werte, die von `v` repräsentiert werden, ein möglichst guter Schätzwert `x` gesucht, so wird dieser Schätzwert in der Regel von einem `v_i` abweichen. Diese Abweichung\n",
     "\n",
     "$$\n",
     "  e_i = |x-v_i|\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "      <th>n</th>\n",
        "      <th>h</th>\n",
        "      <th>h_cum</th>\n",
-       "      <th>fn</th>\n",
+       "      <th>e_n</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -350,7 +350,7 @@
        "</div>"
       ],
       "text/plain": [
-       "     v   n         h     h_cum                  fn\n",
+       "     v   n         h     h_cum                 e_n\n",
        "0  1.0  10  0.208333  0.208333   5*Abs(x - 1.0)/24\n",
        "1  1.3  12  0.250000  0.458333      Abs(x - 1.3)/4\n",
        "2  1.5   8  0.166667  0.625000      Abs(x - 1.5)/6\n",
@@ -358,7 +358,7 @@
        "4  2.1  13  0.270833  1.000000  13*Abs(x - 2.1)/48"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
    "source": [
     "x = Symbol('x')\n",
     "\n",
-    "df['fn'] = np.abs(df.v - x)*df.n/S(df.n.sum())\n",
+    "df['e_n'] = np.abs(df.v - x)*df.n/S(df.n.sum())\n",
     "df"
    ]
   },
@@ -390,7 +390,7 @@
     }
    ],
    "source": [
-    "f = FE(x, df.fn.sum(),name=r'e_{\\text{abs}}')\n",
+    "f = FE(x, df.e_n.sum(),name=r'e_{\\text{abs}}')\n",
     "f.equation()"
    ]
   },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
